# brbot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
brbot/: main.py
brbot/cfg/: initializer.py
brbot/databots/: b3.py  bq_saver.py  sources.yml
docker/: docker-compose.yml
tests/: test_gera_batch.py
