[tool.poetry]
name = "brbot"
version = "0.1.0"
description = "AI powered trading bot"
authors = ["Ronan Fernandes Teixeira <ronan.fernandes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
