[tool.poetry]
name = "brbot"
version = "0.1.0"
description = "AI powered trading bot"
authors = ["Ronan Fernandes Teixeira <ronan.fernandes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ward = "^0.65.0-beta.0"
black = "^22.1.0"
mkdocs = "^1.2.3"
prospector = "^1.7.5"
pip-audit = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
